--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -12,7 +10,7 @@
 
 	<groupId>se.emirb</groupId>
 	<artifactId>springbootreact</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 	<name>SpringBootReact</name>
 	<description>Spring boot project with React frontend</description>
@@ -28,7 +26,8 @@
 
 	<scm>
 		<developerConnection>scm:git:https://github.com/embuc/springbootreact.git</developerConnection>
-	</scm>
+	  <tag>springbootreact-1.0.0</tag>
+  </scm>
 
 	<distributionManagement>
 		<repository>
