--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>se.emirb</groupId>
 		<artifactId>springbootreact</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>frontend</artifactId>
 	<name>Frontend</name>
