--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>se.emirb</groupId>
 	<artifactId>springbootreact</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>SpringBootReact</name>
 	<description>Spring boot project with React frontend</description>
@@ -26,7 +26,7 @@
 
 	<scm>
 		<developerConnection>scm:git:https://github.com/embuc/springbootreact.git</developerConnection>
-	  <tag>springbootreact-1.0.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<distributionManagement>
